--- a/assets/css/pdf_style.css
+++ b/assets/css/pdf_style.css
@@ -1,6 +1,10 @@
 /* - * - * - * - * - * - * - * - * - * - */
 /* 1.0 CSS to make A4 print preview as default web view */
 
+.print-hide{
+	display:none;
+}
+
 @media screen {
 
 	.pagedjs_pages {
