--- a/_layouts/pdf.html
+++ b/_layouts/pdf.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Beautiful PDFs from HTML</title>
+	<title>LoCobSS - Schlussbericht</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/pdf_style.css">
 	<script src="assets/js/toc.js"></script>
 	<script src="assets/js/paged.polyfill.js"></script>
